# forward-epics-to-kafka

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxygen.conf  Jenkinsfile  Jenkinsfile.disabled  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  add_pv.txt  breaking_changes.md  changes.md  codecov.yml  docker_launch.sh  push-repo
EPICSApp/src/: Makefile
ansible/: main.yml
ansible/roles/forward_epics_to_kafka/defaults/: main.yml
ansible/roles/forward_epics_to_kafka/tasks/: cmake.yml  flatbuffers.yml  fmt.yml  forward-epics-to-kafka.yml  (+5 more)
build-script/: invoke-cmake-from-jenkinsfile.sh  jenkins-build.sh  update-local-deps.sh
cmake/: FindCLI11.cmake  FindConcurrentQueue.cmake  FindEPICSV4.cmake  FindEPICSv4.cmake  FindFlatbuffers.cmake  FindFmt.cmake  FindGitCommitExtract.cmake  FindGoogletest.cmake  FindGraylogLogger.cmake  FindJSONForModernCPP.cmake  FindPCRE.cmake  FindPCRE2.cmake  FindPCREX.cmake  FindRapidjson.cmake  FindRdKafka.cmake  FindStaticData.cmake  FindStreamingDataTypes.cmake  FindTrompeloeil.cmake  conan.cmake
cmake/templates/: Version.h.in
conan/: conanfile.txt  conanfile_win32.txt  conanfile_win32_no_epics.txt
configure/: RELEASE
documentation/: INSTALLATION.md  README.md  commands.md  development.md  performance.md  status.md  usage.md
src/: CAPathSetup.cpp  CAPathSetup.h  CMakeLists.txt  CURLReporter.h  ChannelInfo.h  CommandHandler.cpp  CommandHandler.h  Config.cpp  Config.cxx  Config.h  ConfigParser.cpp  ConfigParser.h  ConversionWorker.cpp  ConversionWorker.cxx  ConversionWorker.h  Converter.cpp  Converter.cxx  Converter.h  EpicsClient.cpp  EpicsClient.cxx  EpicsClient.h  EpicsMonitor.h  EpicsPVUpdate.h  FlatBufferCreator.cpp  FlatBufferCreator.h  FlatbufferMessage.cpp  FlatbufferMessage.h  FlatbufferMessageSlice.h  Forwarder.cpp  Forwarder.h  ForwarderInfo.cpp  ForwarderInfo.cxx  ForwarderInfo.h  Kafka.cpp  Kafka.cxx  Kafka.h  KafkaOutput.cpp  KafkaOutput.cxx  KafkaOutput.h  KafkaW.cxx  (+95 more)
src/EpicsClient/: CacheForPeriodicUpdate.cpp  CacheForPeriodicUpdate.h  ChannelRequester.cpp  ChannelRequester.h  EpicsClient.cpp  EpicsClient.h  EpicsClientFactory.cpp  EpicsClientFactory.h  EpicsClientInterface.cpp  EpicsClientInterface.h  EpicsClientMonitor.cpp  EpicsClientMonitor.h  EpicsClientMonitorImpl.h  EpicsClientPeriodic.cpp  EpicsClientPeriodic.h  EpicsClientRandom.cpp  EpicsClientRandom.h  FwdMonitorRequester.cpp  FwdMonitorRequester.h
src/KafkaW/: BrokerSettings.cpp  BrokerSettings.h  Consumer.cpp  Consumer.h  ConsumerEventCb.h  ConsumerFake.cpp  ConsumerFake.h  ConsumerMessage.h  ConsumerRebalanceCb.h  KafkaEventCb.h  KafkaW.cpp  KafkaW.h  Message.h  MetadataException.h  Msg.cpp  Msg.h  PollStatus.cpp  PollStatus.h  Producer.cpp  Producer.h  ProducerDeliveryCb.h  ProducerEventCb.h  ProducerMessage.h  ProducerStats.h  ProducerTopic.cpp  ProducerTopic.cxx  ProducerTopic.h  TopicSettings.cpp
src/schemas/: amo0_psi_sinq_generated.h  f140_general_generated.h  f141_epics_nt_generated.h  f142_logdata_generated.h  f143_structure_generated.h  fwdi_forwarder_internal_generated.h
src/schemas/f142/: DataFromPVStruct.cpp  DataFromPVStruct.h  f142.cpp  f142.cxx  f142.h
src/schemas/f143/: f143.cpp  f143.cxx
src/schemas/fsdc/: FSD_Converter.cxx  FSD_Converter.h  fsdc_FastSamplingData.fbs  fsdc_FastSamplingData_generated.h  ifcdaq_data.fbs  ifcdaq_data_generated.h
src/schemas/tdc_time/: TdcTime.cpp  TdcTime.h
src/scripts/: test-add-many.py  test-start-servers.py  test_cmd.rb
src/tests/: BrokerSettingsTests.cpp  BrokerSettings_tests.cpp  CMakeLists.txt  CommandHandlerTests.cpp  CommandHandler_tests.cpp  CommonConversionTestFunctions.cpp  CommonConversionTestFunctions.h  ConfStandIn.h  ConfigParserTests.cpp  ConfigParser_tests.cpp  ConsumerTests.cpp  Consumer_tests.cpp  ConvertTDCTest.cpp  EpicsClientMonitorTests.cpp  EpicsClientMonitor_tests.cpp  EpicsClientRandomTests.cpp  EpicsClientRandom_tests.cpp  FSD_IfcdaqDataTest.cpp  FSD_NTNDArrayTest.cpp  FSD_NTScalarArrayTest.cpp  GetAlarmDetailsTests.cpp  JsonTests.cpp  ListenerTests.cpp  Listener_tests.cpp  MainOpt.cxx  MainOpt_tests.cpp  MainOpt_tests.cxx  MetricsReporterTests.cpp  MetricsTimerTests.cpp  MockKafkaInstanceSet.h  MockMessage.h  MockProducer.h  ProducerDeliveryCbTests.cpp  ProducerDeliveryCb_tests.cpp  ProducerTests.cpp  Producer_tests.cpp  RangeSetTests.cpp  ReporterHelpers.cpp  ReporterHelpers.h  StatusReporterTests.cpp  (+40 more)
src/tools/: KafkaCreateTopics.java  KafkaIncreasePartitions.java  jcomp.sh  jrun.sh
system-tests/: PVs.py  README.md  conftest.py  docker-compose-fake-epics.yml  docker-compose-idle-updates-long-period.yml  docker-compose-idle-updates.yml  docker-compose.yml  forwarder_config.json  forwarder_config_fake_epics.json  forwarder_config_idle_updates.json  requirements.txt  simpleioc.py  test_changing_units.py  test_example.py  test_forwarding.py  test_forwarding_config_from_json_file.py  test_forwarding_configured_from_file.py  test_forwarding_configured_over_kafka.py  test_forwarding_no_command_at_startup.py  test_generate_fake_epics_data.py  test_idle_pv_updates.py  test_idle_pv_updates_long_period.py  test_longrunning.py  test_pv_changing_units.py
system-tests/compose/: docker-compose-config-from-json.yml  docker-compose-fake-epics.yml  docker-compose-idle-updates-long-period.yml  docker-compose-idle-updates.yml  docker-compose-kafka.yml  docker-compose-units.yml  docker-compose.yml
system-tests/config-files/: forwarder_config.ini  forwarder_config.json  forwarder_config_fake_epics.ini  forwarder_config_fake_epics.json  forwarder_config_idle_updates.ini  forwarder_config_idle_updates.json  forwarder_config_idle_updates_long.ini  forwarder_config_idle_updates_long.json  forwarder_config_lr.ini  forwarder_config_lr.json  forwarder_config_no_command.ini  forwarder_config_units.ini  forwarder_config_units.json
system-tests/helpers/: PVs.py  epics_helpers.py  flatbuffer_helpers.py  forwarder_config.json  forwarderconfig.py  kafka_helpers.py  kafkahelpers.py  producer.py  producerwrapper.py
system-tests/logs/: .gitkeep
(+4 files in other folders)
